testsuite/tests/rewriting_errors/no_auto_fix/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;  --  FLAG
  |    ^^^^^^^^^

error: Rule "custom" is not defining any auto-fixing function
checker.lkql:2:31 in <anonymous>
  2 | map(analysis_units, (unit) => node_checker(unit.root))
    |                               ^^^^^^^^^^^^^^^^^^^^^^^

checker.lkql:2:1 in checker.lkql
  2 | map(analysis_units, (unit) => node_checker(unit.root))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
